--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,8 @@ serde = { version = "1.0", features = ["derive"] }
 regex = "1"
 sled = "0.34.7"
 bson = "2.3.0"
+crossbeam-channel = "0.5.6"
+crossbeam = "0.8.2"
 
 [[test]]
 name = "test_basic"
