--- a/.github/workflows/llvmcov.yml
+++ b/.github/workflows/llvmcov.yml
@@ -38,18 +38,28 @@ jobs:
 
       - name: Unit tests should pass successfully
         run: |
-          cargo llvm-cov test --locked --workspace --html --output-dir ./coverage
+          cargo llvm-cov test --locked --workspace --lcov -output-path lcov.info
 
-      - name: Publish code coverage report
-        uses: peaceiris/actions-gh-pages@v3
+      - name: Codecov
+        uses: codecov/codecov-action@v3.1.0
         with:
-          publish_dir: ./coverage/html
-          publish_branch: coverage
-          allow_empty_commit: true
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          verbose: true
+          fail_ci_if_error: true
 
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v3
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }} # not required for public repos
+          files: lcov.info
+          fail_ci_if_error: true
 
-
+      #- name: Publish code coverage report
+      #  uses: peaceiris/actions-gh-pages@v3
+      #  with:
+      #    publish_dir: ./coverage/html
+      #    publish_branch: coverage
+      #    allow_empty_commit: true
+      #    github_token: ${{ secrets.GITHUB_TOKEN }}
       #- name: Upload coverage
       #  if: success()
       #  uses: actions/upload-artifact@v3
