--- a/.github/workflows/llvmcov.yml
+++ b/.github/workflows/llvmcov.yml
@@ -23,9 +23,11 @@ concurrency:
 env:
   CARGO_INCREMENTAL: 0
   CARGO_TERM_COLOR: always
+  CODECOV_TOKEN: 9c569d07-976d-48f0-84c4-4d2549ac6988
 
 jobs:
   code-coverage:
+    if: ${{github.event.pull_request.number}}
     name: Code Coverage
     runs-on: ubuntu-latest
     steps:
@@ -43,9 +45,10 @@ jobs:
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
         with:
-          token: ${{ secrets.CODECOV_TOKEN }}
+          token: $CODECOV_TOKEN
           files: lcov.info
           fail_ci_if_error: true
+          override_pr: ${{github.event.pull_request.number}}
 
       #- name: Publish code coverage report
       #  uses: peaceiris/actions-gh-pages@v3
