--- a/.github/workflows/llvmcov.yml
+++ b/.github/workflows/llvmcov.yml
@@ -27,7 +27,7 @@ env:
 
 jobs:
   code-coverage:
-    if: ${{github.event.pull_request.number}}
+    #if: ${{github.event.pull_request.number}}
     name: Code Coverage
     runs-on: ubuntu-latest
     steps:
@@ -48,7 +48,7 @@ jobs:
           token: $CODECOV_TOKEN
           files: lcov.info
           fail_ci_if_error: true
-          override_pr: ${{github.event.pull_request.number}}
+          #override_pr: ${{github.event.pull_request.number}}
 
       #- name: Publish code coverage report
       #  uses: peaceiris/actions-gh-pages@v3
