--- a/.github/workflows/llvmcov.yml
+++ b/.github/workflows/llvmcov.yml
@@ -43,6 +43,15 @@ jobs:
       - name: Setup llvm-cov for cargo
         uses: taiki-e/install-action@cargo-llvm-cov
 
+      - name: Set up cargo cache
+        id: cache
+        uses: actions/cache@v3
+        continue-on-error: false
+        with:
+          path: |
+            target/
+          key: "${{ github.workflow }}-${{ runner.os }}-${{ hashFiles('**/Cargo.lock') }}"
+
       - run: |
           echo "${{github.event.pull_request.number}}"
 
