--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -22,8 +22,17 @@ jobs:
         with:
           toolchain: nightly
           override: true
+      - name: Set up cargo cache
+        id: cache
+        uses: actions/cache@v3
+        continue-on-error: false
+        with:
+          path: |
+            ~/.cargo/
+            target/
+          key: "${{ github.workflow }}-${{ runner.os }}-${{ hashFiles('**/Cargo.lock') }}"
       - name: Build
-        run: cargo build
+        run: cargo --locked build
 #  test:
 #    if: always()
 #    needs: [build,next]
