--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -12,6 +12,13 @@ env:
   CARGO_INCREMENTAL: '0'
 
 jobs:
+  mongo:
+    - name: Create mongo Docker container
+      uses: DigiPie/mongo-action@v1.0.1
+    - name: Fill database
+      run: |
+        mongo < .github/mongo-setup.js        
+
   build:
     name: Build
     if: always()
