--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -21,11 +21,14 @@ jobs:
         uses: DigiPie/mongo-action@v1.0.1
       - name: Fill database
         run: |
+          pwd
+          ls -la
+          cat mongo-setup.js
           mongo < mongo-setup.js        
 
   build:
     name: Build
-    if: always()
+    if: false
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
