--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -35,7 +35,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Rust $RUST_VERSION
+      - name: Rust ${{env.RUST_VERSION}}
         run: |
           rustup toolchain add $RUST_VERSION --profile minimal
           rustup default $RUST_VERSION
