--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,12 @@ bson = "2.3.0"
 crossbeam-channel = "0.5.6"
 crossbeam = "0.8.2"
 
+[build-dependencies]
+clippy = { version = "*", optional = true }
+
+#[features]
+#default = []
+
 [[test]]
 name = "test_basic"
 path = "tests/test_basic.rs"
