--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ sled = "0.34.7"
 bson = "2.3.0"
 crossbeam-channel = "0.5.6"
 crossbeam = "0.8.2"
+owning_ref = "0.4.1"
 
 [build-dependencies]
 clippy = { version = "*", optional = true }
