--- a/.github/workflows/audit.yml
+++ b/.github/workflows/audit.yml
@@ -2,6 +2,13 @@ name: Security audit
 on:
   push:
 
+permissions:
+  contents: read
+  pull-requests: write
+  statuses: write
+  checks: write
+  security-events: write
+  
 jobs:
   security_audit:
     runs-on: ubuntu-latest
