--- a/.github/workflows/audit.yml
+++ b/.github/workflows/audit.yml
@@ -1,21 +1,19 @@
 name: Security audit
 on:
-  push:
+  pull_request:
+    types: [synchronize,opened,reopened]
 
 permissions:
-  contents: read|write
+  contents: read
   pull-requests: write|read
   statuses: write|read
   checks: write|read
-  security-events: write|read
 
 jobs:
   security_audit:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - run: |
-          env
       - uses: actions-rs/audit-check@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
