--- a/.github/workflows/audit.yml
+++ b/.github/workflows/audit.yml
@@ -5,9 +5,9 @@ on:
 
 permissions:
   contents: read
-  pull-requests: write|read
-  statuses: write|read
-  checks: write|read
+  pull-requests: write
+  statuses: write
+  checks: write
 
 jobs:
   security_audit:
