--- a/.github/workflows/audit.yml
+++ b/.github/workflows/audit.yml
@@ -11,6 +11,7 @@ permissions:
 
 jobs:
   security_audit:
+    #name: Audit
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
