--- a/.github/workflows/audit.yml
+++ b/.github/workflows/audit.yml
@@ -1,7 +1,7 @@
 name: Security audit
 on:
-  pull_request:
-    types: [synchronize,opened,reopened]
+  push:
+    #types: [synchronize,opened,reopened]
 
 permissions:
   contents: read
