--- a/.github/workflows/audit.yml
+++ b/.github/workflows/audit.yml
@@ -3,11 +3,7 @@ on:
   push:
     #types: [synchronize,opened,reopened]
 
-permissions:
-  contents: read
-  pull-requests: write
-  statuses: write
-  checks: write
+permissions: write-all
 
 jobs:
   security_audit:
