--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,9 +1,11 @@
 name: Security Audit
 
 on:
-  #pull_request:
+  pull_request:
     # in the PR updates
-  #  types: [synchronize,opened]
+    types: [synchronize,opened]
+
+permissions: write-all
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -34,7 +36,6 @@ jobs:
 
   build:
     name: Build
-    if: false
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -73,6 +74,7 @@ jobs:
 
   audit:
     name: Audit
+    if: false
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
