--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,11 +1,10 @@
-name: Security Audit
+name: Rust
 
 on:
   pull_request:
     # in the PR updates
-    types: [synchronize,opened]
-
-permissions: write-all
+    types: [synchronize,opened,reopened]
+    branches: master
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -15,6 +14,12 @@ env:
   CARGO_TERM_COLOR: always
   CARGO_INCREMENTAL: '0'
   RUST_VERSION: 1.65.0
+
+permissions:
+  contents: read
+  pull-requests: write
+  statuses: write
+  checks: write
 
 jobs:
   mongo:
@@ -70,6 +75,7 @@ jobs:
           args: --all-targets -- -D warnings
           token: ${{ secrets.GITHUB_TOKEN }}
           name: Clippy Report
+
         continue-on-error: true
 
   audit:
