--- a/.github/workflows/llvmcov.yml
+++ b/.github/workflows/llvmcov.yml
@@ -2,11 +2,11 @@ name: LLVM-Cov
 
 
 on:
-  #pull_request:
-  #  types: [synchronize,opened]
-  push:
+  pull_request:
+    types: [synchronize,opened]
+  #push:
     # in the Bors staging/trying only
-    branches: ['*staging*', '*trying*']
+  #  branches: ['*staging*', '*trying*']
 
   #push:
   # do not repeat test after bors staging
