--- a/.github/workflows/1main.yml
+++ b/.github/workflows/1main.yml
@@ -1,4 +1,4 @@
-name: Rust
+name: ARust
 
 on:
   pull_request:
@@ -22,9 +22,8 @@ permissions:
   checks: write
 
 jobs:
-  mongo:
-    name: Mongo
-    if: false
+  amongo:
+    name: Amongo
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
