--- a/.github/workflows/2llvmcov.yml
+++ b/.github/workflows/2llvmcov.yml
@@ -1,10 +1,9 @@
 name: LLVM-Cov
 
-
 on:
-  pull_request:
-    types: [synchronize,opened]
-  #push:
+  #pull_request:
+  #  types: [synchronize,opened]
+  push:
     # in the Bors staging/trying only
   #  branches: ['*staging*', '*trying*']
 
