--- a/.github/workflows/1main.yml
+++ b/.github/workflows/1main.yml
@@ -50,6 +50,19 @@ jobs:
           rustup component add clippy rustfmt
 
       - name: Set up cargo cache
+        id: cargo-cache
+        uses: actions/cache@v3
+        continue-on-error: false
+        with:
+          path: |
+            ~/.cargo/bin/
+          key: "Clippy-${{ runner.os }}-r${{env.RUST_VERSION}}-${{ hashFiles('**/Cargo.lock') }}"
+
+      - name: Install required cargo
+        if: steps.cargo-cache.outputs.cache-hit != 'true'
+        run: cargo install clippy-sarif sarif-fmt
+
+      - name: Set up cargo cache
         id: cache
         uses: actions/cache@v3
         continue-on-error: false
@@ -57,10 +70,6 @@ jobs:
           path: |
             target/
           key: "${{ github.workflow }}-${{ runner.os }}-r${{env.RUST_VERSION}}-${{ hashFiles('**/Cargo.lock') }}"
-
-
-      - name: Install required cargo
-        run: cargo install clippy-sarif sarif-fmt
 
       - name: Run rust-clippy
         run:
@@ -74,6 +83,7 @@ jobs:
         with:
           sarif_file: rust-clippy-results.sarif
           wait-for-processing: true
+        continue-on-error: true
 
       #- name: Run clippy action to produce annotations
       #  uses: actions-rs/clippy-check@v1
