--- a/bors.toml
+++ b/bors.toml
@@ -1,4 +1,4 @@
-status = [ "Bors" ]
+status = [ "Code Coverage", "Build" ]
 timeout_sec = 3600 # 1 hour
 
-required_approvals = 1
+#required_approvals = 1
