--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,9 @@
 name: Main
 on:
   push:
-    branches: [ trying, staging, development, master ]
+    # if default branch it is not master
+    # rename it also in the env.DEFAULT_BRANCH
+    branches: [ trying, staging, $default-branch ]
   pull_request:
     types: [ synchronize, opened, ready_for_review, labeled, unlabeled ]
     paths-ignore:
@@ -37,13 +39,15 @@ env:
   CARGO_INCREMENTAL: 0
   CARGO_TERM_COLOR: always
   RUST_VERSION: 1.65.0
+  # if the Bors bot is used it's not really necessary, all test are passed on staging
+  RUN_FOR_DEFAULT: true
   # add package names to exclude unit tests
   EXCLUDE_TESTS:
 
 jobs:
   # it calculates conditions to run following jobs
   conditions:
-    name: Conditions
+    name: Conditions $default-branch ${{ "test/$default-branch" }} ${{ 'test/$default-branch' }} ${{ $default-branch == 'master' }}
     if: ${{ 
         ( github.event_name != 'pull_request' ||
           ( github.event.action != 'labeled' && 
@@ -70,30 +74,31 @@ jobs:
       - run: true
     outputs:
       # it's push into development branch (by bors or conventional merge)
-      master-ci: ${{ github.ref == 'refs/heads/development' }}
+      default-branch-ci: ${{ github.ref == "refs/heads/$default-branch" }}
       # it's push into staging/tying by bors
       staging-ci: ${{ github.ref == 'refs/heads/trying' || github.ref == 'refs/heads/staging' }}
-      # it's non-draft pull request
-      non-staging-ci: ${{ github.event_name == 'pull_request' }}
-      # it's push into staging/tying by bors
       # it's non-draft pull_request
-      general-ci: ${{ 
+      general-ci: ${{
+        (github.ref == "refs/heads/$default" && RUN_FOR_DEFAULT == 'true') || 
         github.ref == 'refs/heads/trying' || 
         github.ref == 'refs/heads/staging' ||
         github.event_name == 'pull_request' }}
       # it's push into development branch (by bors or conventional merge)
       # it's non-draft pull_request with label `!ci-codecov`
       codecov: ${{
-        github.ref == 'refs/heads/development' ||
+        github.ref == "refs/heads/$default-branch" ||
             ( github.event_name == 'pull_request' &&
               contains(github.event.pull_request.labels.*.name,'!ci-codecov') ) }}
       # it's push into staging/tying by bors
       # it's non-draft pull_request with label `!ci-integration`
       integration: ${{
-        github.ref == 'refs/heads/trying' || github.ref == 'refs/heads/staging' || 
+        (github.ref == "refs/heads/$default" && RUN_FOR_DEFAULT == 'true') ||
+        github.ref == 'refs/heads/trying' || 
+        github.ref == 'refs/heads/staging' || 
             ( github.event_name == 'pull_request' &&
               contains(github.event.pull_request.labels.*.name,'!ci-integration') ) }}
       audit: ${{
+        (github.ref == "refs/heads/$default" && RUN_FOR_DEFAULT == 'true') ||
         github.ref == 'refs/heads/trying' ||
         github.ref == 'refs/heads/staging' ||
         ( github.event_name == 'pull_request' &&
